force-app/main/default/objects/Account/fields/Potential_Savings__c.field-meta.xml
<CustomField>
    <fullName>Potential_Savings__c</fullName>
    <label>Potential Savings</label>
    <summarizedField>Line_Of_Business_Account__c.Potential_Savings__c</summarizedField>
    <summaryForeignKey>Line_Of_Business_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>