force-app/main/default/objects/Account/fields/Primary_Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Warehouse_Code__c</fullName>
    <label>Primary DC Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>