force-app/main/default/objects/Account/fields/Prior_PIMS__c.field-meta.xml
<CustomField>
    <fullName>Prior_PIMS__c</fullName>
    <description>The PIMS being used prior to the current PIMS.</description>
    <inlineHelpText>The PIMS being used prior to the current PIMS.</inlineHelpText>
    <label>Prior PIMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PIMS</valueSetName>
    </valueSet>
</CustomField>