force-app/main/default/objects/Account/fields/Provet_Plus_Grade__c.field-meta.xml
<CustomField>
    <fullName>Provet_Plus_Grade__c</fullName>
    <label>Provet Plus Grade</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>