force-app/main/default/objects/Account/fields/Provet_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Provet_Points_Balance__c</fullName>
    <label>Provet Points Balance</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>