force-app/main/default/objects/Account/fields/Provet_Points_Grading__c.field-meta.xml
<CustomField>
    <fullName>Provet_Points_Grading__c</fullName>
    <label>Provet Points Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>