force-app/main/default/objects/Account/fields/ProVet_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>ProVet_Pricing_Type__c</fullName>
    <label>Provet Pricing Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>