force-app/main/default/objects/Account/fields/Realized_Savings__c.field-meta.xml
<CustomField>
    <fullName>Realized_Savings__c</fullName>
    <label>Realized Savings</label>
    <summarizedField>Line_Of_Business_Account__c.Realized_Savings__c</summarizedField>
    <summaryForeignKey>Line_Of_Business_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>