force-app/main/default/objects/Account/fields/Relaunch_Banner_Active__c.field-meta.xml
<CustomField>
    <fullName>Relaunch_Banner_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls a rich text field displayed on the account page that indicates the account is being retrained. Triggers a workflow that deactivates this banner in 90 days.</description>
    <label>Relaunch Banner Active</label>
    <type>Checkbox</type>
</CustomField>