force-app/main/default/objects/Account/fields/Request_Covetrus_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Covetrus_Customer_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Covetrus Customer Number</label>
    <type>Checkbox</type>
</CustomField>