force-app/main/default/objects/Account/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <label>Site Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>