force-app/main/default/objects/Account/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <description>This is the outside rep Territory Manager from CONA.</description>
    <label>Territory Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>