force-app/main/default/objects/Account/fields/TM_Region__c.field-meta.xml
<CustomField>
    <fullName>TM_Region__c</fullName>
    <description>Territory Manager Region</description>
    <label>TM Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>