force-app/main/default/objects/Account/fields/TM_Territory__c.field-meta.xml
<CustomField>
    <fullName>TM_Territory__c</fullName>
    <description>Territory Manager Territory ID</description>
    <label>TM Territory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>