force-app/main/default/objects/Account/fields/Transition_PIMS__c.field-meta.xml
<CustomField>
    <fullName>Transition_PIMS__c</fullName>
    <description>The transitional/temporary PIMS being used prior to upgrading to a different PIMS</description>
    <inlineHelpText>The transitional/temporary PIMS being used prior to upgrading to a different PIMS</inlineHelpText>
    <label>Transition PIMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PIMS</valueSetName>
    </valueSet>
</CustomField>