force-app/main/default/objects/Account/fields/Update_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Update_RecordType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update RecordType</label>
    <type>Checkbox</type>
</CustomField>