force-app/main/default/objects/Account/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>Field which is editable so that the version number of the asset the account is using can be added as an Account Attribute. This will be used by Sales to filter on. CCRM-3093</description>
    <label>Version Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>