force-app/main/default/objects/Account/fields/Vets_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Vets_Registration_Number__c</fullName>
    <label>Vets Registration Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>