force-app/main/default/objects/Account/fields/VSTHID__c.field-meta.xml
<CustomField>
    <fullName>VSTHID__c</fullName>
    <label>VSTHID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>