force-app/main/default/objects/Account/recordTypes/Covetrus_Account.recordType-meta.xml
<RecordType>
    <fullName>Covetrus_Account</fullName>
    <active>true</active>
    <label>Covetrus Account</label>
</RecordType>