force-app/main/default/objects/Account/validationRules/Account_Name_Field_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Field_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				OR(
				$Profile.Name = &quot;GSS Sales - NA&quot;,
				$Profile.Name = &quot;GSS Support - NA&quot;
				),
    ISCHANGED( Name ), 
    NOT($Profile.Name = &quot;System Administrator&quot;),
				NOT( $Permission.Sales_Operations_Admin )
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the &quot;Account Name&quot;</errorMessage>
</ValidationRule>