force-app/main/default/objects/Account/validationRules/Convert_Prospect_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Convert_Prospect_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; 
RecordType.Name != &#39;Prospect&#39; &amp;&amp;  
$Profile.Name  != &#39;System Administrator&#39; &amp;&amp; 
NOT($Permission.Sales_Operations_Admin) &amp;&amp;
NOT($Permission.Governance_Admin)</errorConditionFormula>
    <errorMessage>When converting a Lead into an Account, it can only be created as a Prospect record type</errorMessage>
</ValidationRule>