force-app/main/default/objects/Account/listViews/All_Accounts_NZ.listView-meta.xml
<ListView>
    <fullName>All_Accounts_NZ</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ACCOUNT_NUMBER</field>
        <operation>startsWith</operation>
        <value>N</value>
    </filters>
    <label>All Accounts - NZ</label>
</ListView>