force-app/main/default/objects/Account/listViews/Covetrus_APAC_Accounts.listView-meta.xml
<ListView>
    <fullName>Covetrus_APAC_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Covetrus_Customer_Number__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Covetrus_Account</value>
    </filters>
    <filters>
        <field>Company_Region__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <label>Covetrus APAC Accounts</label>
    <sharedTo>
        <roleAndSubordinates>APAC</roleAndSubordinates>
    </sharedTo>
</ListView>