force-app/main/default/objects/Account/listViews/Covetrus_NA_Accounts.listView-meta.xml
<ListView>
    <fullName>Covetrus_NA_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Covetrus_Customer_Number__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Covetrus_Account</value>
    </filters>
    <filters>
        <field>Company_Region__c</field>
        <operation>equals</operation>
        <value>NA</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>%</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Covetrus_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <label>Covetrus NA Accounts</label>
    <sharedTo>
        <role>Admin</role>
        <roleAndSubordinates>GSS_NA_Admin</roleAndSubordinates>
    </sharedTo>
</ListView>