force-app/main/default/objects/Account/listViews/Covetrus_UK_Accounts.listView-meta.xml
<ListView>
    <fullName>Covetrus_UK_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Covetrus_Account</value>
    </filters>
    <filters>
        <field>Company_Region__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>Covetrus UK Accounts</label>
    <sharedTo>
        <roleAndSubordinates>EMEA</roleAndSubordinates>
    </sharedTo>
</ListView>