force-app/main/default/objects/Account/listViews/Covetrus_UK_RoboVet_Accounts.listView-meta.xml
<ListView>
    <fullName>Covetrus_UK_RoboVet_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PIMS__c</field>
        <operation>equals</operation>
        <value>Robovet</value>
    </filters>
    <label>Covetrus UK RoboVet Accounts</label>
</ListView>