force-app/main/default/objects/Account/listViews/Covetrus_UK_RxWorks_Accounts.listView-meta.xml
<ListView>
    <fullName>Covetrus_UK_RxWorks_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Covetrus_Customer_Number__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Account_Status__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PIMS__c</field>
        <operation>equals</operation>
        <value>RxWorks</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Josh,Lucille,Gayle,Sorrel,Mark,Marta</value>
    </filters>
    <label>Covetrus UK RxWorks Accounts</label>
</ListView>