force-app/main/default/objects/Account/listViews/VisionVPM_Accounts1.listView-meta.xml
<ListView>
    <fullName>VisionVPM_Accounts1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PIMS__c</field>
        <operation>equals</operation>
        <value>VisionVPM</value>
    </filters>
    <label>VisionVPM Accounts</label>
    <sharedTo>
        <group>VisionVPM_Implementation</group>
    </sharedTo>
</ListView>